Try fixing spacing on categories again

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -439,7 +439,6 @@ blockquote {
     .jumbotron {
         margin-bottom: 0;
         border-radius: 0;
-        padding-bottom: 25px;
     }
 
     .listfeaturedtag .card {
